# dsp-permissions-scripts

./: .gitignore  .pre-commit-config.yaml  084C_kirchen_rom.http  CLAUDE.md  DOAPs before.json  README.md  group-related DOAP before.json  pyproject.toml  resource_iris.txt  resources affected by dsp.errors.NotFoundException.txt  roud-oeuvres-permissions.py
.github/workflows/: pr-tests.yml
dsp_permissions_scripts/: 0102_scenario_tanner_custom_group.py  0102_scenario_tanner_group_aps.py  0807_mls.py  080C_kuhaba.py  080C_kunsthalle.py  0813_BMF_DOAPs.py  082A_lenzburg_other_classes_and_doaps.py  082A_lenzburg_stream_audios.py  0847_locusludi.py  084C_churches.py  084C_kirchen.py  authentication.py  glaubenmachenlassen.py  healing-arts.py  limc.py  main.py  permissions.py  project.py  scenario-tanner.py  template.py  template_for_single_iris.py  util.py  webern.py  wordweb.py
dsp_permissions_scripts/ap/: ap_delete.py  ap_get.py  ap_model.py  ap_serialize.py  ap_set.py
dsp_permissions_scripts/doap/: doap_delete.py  doap_get.py  doap_model.py  doap_serialize.py  doap_set.py
dsp_permissions_scripts/dsp_connection_service/: dsp_connection_service.py  dsp_connection_service_live.py
dsp_permissions_scripts/models/: ap.py  api_error.py  builtin_groups.py  doap.py  errors.py  group.py  group_utils.py  groups.py  host.py  oap.py  permission.py  scope.py  value.py
dsp_permissions_scripts/oap/: oap_get.py  oap_get_knora_base.py  oap_get_set.py  oap_model.py  oap_serialize.py  oap_set.py  update_iris.py
dsp_permissions_scripts/scenario-tanner/: DOAPs after.json  scenario-tanner.py
dsp_permissions_scripts/scenario_tanner/: cleanup_tanner.py  modify_tanner.py
dsp_permissions_scripts/utils/: ap.py  ap_serialize.py  authentication.py  connection.py  doap_get.py  doap_operations.py  doap_serialize.py  doap_set.py  dsp_client.py  get_logger.py  get_package_name.py  helpers.py  oap.py  oap_serialize.py  permissions.py  project.py  scope_serialization.py  try_request.py
dsp_permissions_scripts/utils/ap/: ap.py  ap_get.py  ap_serialize.py  ap_set.py  ap_update.py
project_code/0102_scenario_tanner/: modify_tanner.py
project_code/0811_postcards/: postcards.py
project_code/scenario_tanner/: cleanup_tanner.py
project_data/0102/: APs_modified.json  APs_original.json  DOAPs_modified.json  DOAPs_original.json
project_data/0102/OAPs_original/: resource_ZWBl97XpTM-ajHGXC9JY8A.json  resource_Ztg2dbyGRqetNvxXma0fhw.json  resource_ZwmpSAbvQwucwNXgCNtFsg.json  resource_zuzFqwvVQFS7ngFuvmnMrg.json
project_data/0102/OAPs_original_original/: resource_--ClyJkNTeO2FmYm8E2qjQ.json  resource_-2TbRt9DQO6ZYeVkF880MA.json  resource_-3YMZw0YSqSIvMN4smyf_g.json  resource_-4GTpqFBQAqxNTaJIvXEAQ.json  resource_-6SSxv13Rn-XSktp6prd8w.json  resource_-6XT-z4lS4CIIQVg2C65zA.json  resource_-7vaifJlQFiS-0EDOEM2Gg.json  resource_-8zicUwVTsyVuTAm1cYaVg.json  (+3791 more)
project_data/F18E/: APs_modified.json  APs_original.json  DOAPs_modified.json  DOAPs_original.json
project_data/F18E_example_project/: APs_original.json
testdata/: APs_1234_serialized.json
tests/: test_PermissionScope.py  test_ap.py  test_ap_serialization.py  test_ap_set.py  test_doap_model.py  test_doap_serialization.py  test_doap_set.py  test_get_all_doaps_of_project.py  test_group.py  test_group_utils.py  test_helpers.py  test_oap_get.py  test_oap_get_knora_base.py  test_oap_model.py  test_oap_serialization.py  test_oap_update_iris.py  test_scope.py  test_scope_serialization.py
(+1385 files in other folders)
