[tool.poetry]
authors = ["DaSCH - Swiss National Data and Service Center for the Humanities <info@dasch.swiss>"]
description = ""
license = "Apache-2.0"
name = "dsp-permissions-scripts"
packages = [{include = "dsp_permissions_scripts"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
types-requests = "^2.31.0.10"
python-dotenv = "^1.0.0"
black = "^23.9.1"
pylint = "^2.17.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pylint.MASTER]
extension-pkg-whitelist="pydantic"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "trailing-whitespace",
    "too-few-public-methods",
    "logging-fstring-interpolation",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
