[tool.poetry]
authors = ["DaSCH - Swiss National Data and Service Center for the Humanities <info@dasch.swiss>"]
description = ""
license = "Apache-2.0"
name = "dsp-permissions-scripts"
packages = [{include = "dsp_permissions_scripts"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12.0"
requests = "^2.31.0"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
types-requests = "^2.31.0.20240406"
python-dotenv = "^1.0.1"
black = "^24.3.0"
pylint = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pylint.MASTER]
extension-pkg-whitelist="pydantic"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "trailing-whitespace",
    "too-few-public-methods",
    "logging-fstring-interpolation",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
ignore_missing_imports = false
show_column_numbers = true
strict = true
disallow_untyped_defs = true
